переделал модели, и шаблоны

--- a/start_page/templates/start_page/base.html
+++ b/start_page/templates/start_page/base.html
@@ -8,12 +8,26 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--metatextblock-->
-    <title>Онлайн клуб йоги и медитации</title>
-    <meta name="description" content="Йога и медитация, как их преподают в Индии. Глубокие знания простым и современным языком. Онлайн уроки йоги и медитации. Йога терапия направленная на разные участки тела. Профессиональные преподаватели">
+    <title>
+        {% if settings == None %}
+        Онлайн клуб йоги и медитации
+        {% else %}
+        {{ settings.title }}
+        {% endif %}
+    </title>
+    <meta name="description" content="{% if settings == None %}
+    Йога и медитация, как их преподают в Индии. Глубокие знания простым и современным языком. Онлайн уроки йоги и медитации. Йога терапия направленная на разные участки тела. Профессиональные преподаватели
+{% else %}{{ settings.description }}{% endif %}">
     <meta name="keywords" content="йога, йога дома, йога для начинающих, медитация, йога терапия, классика">
     <meta property="og:url" content="#">
-    <meta property="og:title" content="Онлайн клуб йоги и медитации">
-    <meta property="og:description" content="Как часто ты хотел пойти в йоге и медитации чуть глубже? Возможно, начинал заниматься по урокам онлайн, но чего-то не хватало. А что если в этот раз попробовать следующим образом? Будний день. Ты только что проснулся. На часах около 6 утра с небольшим. Стакан теплой воды с лимоном. Открыл окно. Проветрил комнату. Заправил кровать. Контрастный душ. Расстелил коврик для йоги и подключился к Zoom (платформа для онлайн-занятий). Возможно, еще немного сонный. Но вот к занятию в режиме реального времени начинают подключаться ребята из других городов и стран: Москва, Санкт-Петербург, Химки, Дмитров, Алматы, Уральское, Красногорск, Саратов, Карелия, Кандалакша, Полтава, Златоуст, Екатеринбург, Улан-Удэ, Оренбург, Рязань, Челябинск, Беларусь, Украина, Казахстан, Польша, Турция, Словения, Великобритания, Индонезия. Ты слышишь: &quot;Ребята, доброе утро!&quot; ... и делаешь очередной шаг навстречу здоровому телу и спокойному уму. Так мы начинаем наши дни в Йога-клубе. И за время его существования поняли, что именно живая поддержка преподавателей и пример других ребят очень сильно продвигают. Возможно, в этом месяце и у тебя появится желание стать частью нашей большой семьи (нас уже 320+ человек).">
+    <meta property="og:title" content="{% if settings == None %}
+        Онлайн клуб йоги и медитации
+        {% else %}
+        {{ settings.title }}
+        {% endif %}">
+    <meta property="og:description" content="{% if settings == None %}
+    Как часто ты хотел пойти в йоге и медитации чуть глубже? Возможно, начинал заниматься по урокам онлайн, но чего-то не хватало. А что если в этот раз попробовать следующим образом? Будний день. Ты только что проснулся. На часах около 6 утра с небольшим. Стакан теплой воды с лимоном. Открыл окно. Проветрил комнату. Заправил кровать. Контрастный душ. Расстелил коврик для йоги и подключился к Zoom (платформа для онлайн-занятий). Возможно, еще немного сонный. Но вот к занятию в режиме реального времени начинают подключаться ребята из других городов и стран: Москва, Санкт-Петербург, Химки, Дмитров, Алматы, Уральское, Красногорск, Саратов, Карелия, Кандалакша, Полтава, Златоуст, Екатеринбург, Улан-Удэ, Оренбург, Рязань, Челябинск, Беларусь, Украина, Казахстан, Польша, Турция, Словения, Великобритания, Индонезия. Ты слышишь: &quot;Ребята, доброе утро!&quot; ... и делаешь очередной шаг навстречу здоровому телу и спокойному уму. Так мы начинаем наши дни в Йога-клубе. И за время его существования поняли, что именно живая поддержка преподавателей и пример других ребят очень сильно продвигают. Возможно, в этом месяце и у тебя появится желание стать частью нашей большой семьи (нас уже 320+ человек).
+{% else %}{{ settings.description }}{% endif %}">
     <meta property="og:type" content="website">
     <meta property="og:image" content="{% static 'images/photo.jpg' %}">
     <link rel="canonical" href="#">
