--- a/start_page/templates/start_page/mob_menu/mob_menu.html
+++ b/start_page/templates/start_page/mob_menu/mob_menu.html
@@ -449,22 +449,22 @@
                 <div class="t228__maincontainer " style="height:8vh;">
                     <div class="t228__padding40px"></div>
                     <div class="t228__leftside">
-                        <div class="t228__leftcontainer"><a href="#rec562268330" class="t228__imgwrapper" style="color:#ffffff;"><img class="t228__imglogo " src="{% static 'fonts/photo.svg' %}" imgfield="img" style="max-height: 80px" alt></a></div>
+                        <div class="t228__leftcontainer"><a href="#rec564508995" class="t228__imgwrapper" style="color:#ffffff;"><img class="t228__imglogo " src="{% static 'fonts/photo.svg' %}" imgfield="img" style="max-height: 80px" alt></a></div>
                     </div>
                     <div class="t228__centerside t228__menualign_right">
                         <nav class="t228__centercontainer" aria-label="Основные разделы на странице">
                             <ul class="t228__list" role="menubar" aria-label="Основные разделы на странице">
-                                <li class="t228__list_item" role="none" style="padding:0 30px 0 0;"><a class="t-menu__link-item" href="#rec562286041" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="1" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">О проекте</a></li>
+                                <li class="t228__list_item" role="none" style="padding:0 30px 0 0;"><a class="t-menu__link-item" href="#rec562286041" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="1" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">{% if buttons == None %}О проекте{% else %}{{buttons.button1}}{% endif %}</a></li>
                                 <li
-                                    class="t228__list_item" role="none" style="padding:0 30px;"><a class="t-menu__link-item" href="#rec562616405" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="2" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">Расписание</a></li>
+                                    class="t228__list_item" role="none" style="padding:0 30px;"><a class="t-menu__link-item" href="#rec562616405" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="2" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">{% if buttons == None %}Расписание{% else %}{{buttons.button2}}{% endif %}</a></li>
                                     <li
-                                        class="t228__list_item" role="none" style="padding:0 30px;"><a class="t-menu__link-item" href="#rec562621503" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="3" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">Преподаватели</a></li>
+                                        class="t228__list_item" role="none" style="padding:0 30px;"><a class="t-menu__link-item" href="#rec562621503" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="3" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">{% if buttons == None %}Преподаватели{% else %}{{buttons.button3}}{% endif %}</a></li>
                                         <li
-                                            class="t228__list_item" role="none" style="padding:0 30px;"><a class="t-menu__link-item" href="#rec562619839" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="4" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">Абонементы</a></li>
+                                            class="t228__list_item" role="none" style="padding:0 30px;"><a class="t-menu__link-item" href="#rec562619839" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="4" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">{% if buttons == None %}Абонементы{% else %}{{buttons.button4}}{% endif %}</a></li>
                                             <li
-                                                class="t228__list_item" role="none" style="padding:0 30px;"><a class="t-menu__link-item" href="#rec562837987" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="5" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">Отзывы</a></li>
+                                                class="t228__list_item" role="none" style="padding:0 30px;"><a class="t-menu__link-item" href="#rec562837987" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="5" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">{% if buttons == None %}Отзывы{% else %}{{buttons.button5}}{% endif %}</a></li>
                                                 <li
-                                                    class="t228__list_item" role="none" style="padding:0 0 0 30px;"><a class="t-menu__link-item" href="#rec562857666" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="6" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">Контакты</a></li>
+                                                    class="t228__list_item" role="none" style="padding:0 0 0 30px;"><a class="t-menu__link-item" href="#rec562857666" role="menuitem" tabindex="0" data-menu-submenu-hook data-menu-item-number="6" style="color:#ffffff;font-size:16px;font-weight:400;font-family:&#x27;Montserrat&#x27;;">{% if buttons == None %}Контакты{% else %}{{buttons.button6}}{% endif %}</a></li>
                             </ul>
                         </nav>
                     </div>
