--- a/start_page/templates/start_page/two_page/o_club.html
+++ b/start_page/templates/start_page/two_page/o_club.html
@@ -1,9 +1,9 @@
 {% load static %}
 
 
-        <div id="rec562286041" class="r t-rec" style=" " data-animationappear="off" data-record-type="396">
-            <!-- T396 -->
-            <style>
+<div id="rec562286041" class="r t-rec" style=" " data-animationappear="off" data-record-type="396">
+    <!-- T396 -->
+    <style>
                 #rec562286041 .t396__artboard {
                     height: 271px;
                     background-color: #f7f7f5;
@@ -286,37 +286,76 @@
                         left: calc(50% - 160px + -487px);
                     }
                 }
-            </style>
-            <div class="t396">
-                <div class="t396__artboard" data-artboard-recid="562286041" data-artboard-screens="320,480,640,960,1200" data-artboard-height="271" data-artboard-valign="center" data-artboard-upscale="window" data-artboard-height-res-320="320" data-artboard-upscale-res-320="grid"
-                    data-artboard-height-res-480="390" data-artboard-height-res-640="350" data-artboard-height-res-960="265">
-                    <div class="t396__carrier" data-artboard-recid="562286041"></div>
-                    <div class="t396__filter" data-artboard-recid="562286041"></div>
-                    <div class="t396__elem tn-elem tn-elem__5622860411678667325571 t-animate" data-elem-id="1678667325571" data-elem-type="text" data-field-top-value="60" data-field-left-value="80" data-field-width-value="255" data-field-axisy-value="top"
-                        data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinleft" data-animate-duration="1"
-                        data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="40" data-field-left-res-320-value="10" data-field-top-res-480-value="50" data-field-left-res-480-value="40" data-field-top-res-640-value="60" data-field-left-res-640-value="70"
-                        data-field-left-res-960-value="70">
-                        <h2 class="tn-atom" field="tn_text_1678667325571">О клубе</h2>
-                    </div>
-                    <div class="t396__elem tn-elem tn-elem__5622860411678667325575" data-elem-id="1678667325575" data-elem-type="text" data-field-top-value="134" data-field-left-value="80" data-field-width-value="333" data-field-axisy-value="top" data-field-axisx-value="left"
-                        data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="94" data-field-left-res-320-value="10" data-field-width-res-320-value="293"
-                        data-field-top-res-480-value="109" data-field-left-res-480-value="40" data-field-top-res-640-value="134" data-field-left-res-640-value="70" data-field-width-res-640-value="401" data-field-left-res-960-value="70">
-                        <div class="tn-atom" field="tn_text_1678667325575">Опытные и&nbsp;профессиональные преподаватели. Сертификаты Международного альянса йоги.</div>
-                    </div>
-                    <div class="t396__elem tn-elem tn-elem__5622860411678667325578 t-animate" data-elem-id="1678667325578" data-elem-type="text" data-field-top-value="123" data-field-left-value="730" data-field-width-value="430" data-field-axisy-value="top"
-                        data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="1"
-                        data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="189" data-field-left-res-320-value="10" data-field-width-res-320-value="293" data-field-top-res-480-value="201" data-field-left-res-480-value="106" data-field-width-res-480-value="334"
-                        data-field-top-res-640-value="246" data-field-left-res-640-value="70" data-field-width-res-640-value="464" data-field-top-res-960-value="69" data-field-left-res-960-value="499">
-                        <div class="tn-atom" field="tn_text_1678667325578">В&nbsp;нашей команде сотни людей, мы&nbsp;рады видеть каждого, кто&nbsp;решил заниматься своим саморазвитием, йогой и&nbsp;медитаций, или&nbsp;просто нуждается в&nbsp;мотивации и&nbsp;поддержке</div>
-                    </div>
-                    <div class="t396__elem tn-elem tn-elem__5622860411678667535625" data-elem-id="1678667535625" data-elem-type="shape" data-field-top-value="220" data-field-left-value="729" data-field-height-value="1" data-field-width-value="510" data-field-axisy-value="top"
-                        data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="180" data-field-left-res-320-value="-487"
-                        data-field-top-res-480-value="341" data-field-left-res-480-value="106" data-field-top-res-640-value="233" data-field-left-res-640-value="-238" data-field-width-res-640-value="770" data-field-top-res-960-value="219" data-field-left-res-960-value="499">
-                        <div class="tn-atom"></div>
-                    </div>
+
+    </style>
+    <div class="t396">
+        <div class="t396__artboard" data-artboard-recid="562286041" data-artboard-screens="320,480,640,960,1200"
+             data-artboard-height="271" data-artboard-valign="center" data-artboard-upscale="window"
+             data-artboard-height-res-320="320" data-artboard-upscale-res-320="grid"
+             data-artboard-height-res-480="390" data-artboard-height-res-640="350" data-artboard-height-res-960="265">
+            <div class="t396__carrier" data-artboard-recid="562286041"></div>
+            <div class="t396__filter" data-artboard-recid="562286041"></div>
+            <div class="t396__elem tn-elem tn-elem__5622860411678667325571 t-animate" data-elem-id="1678667325571"
+                 data-elem-type="text" data-field-top-value="60" data-field-left-value="80" data-field-width-value="255"
+                 data-field-axisy-value="top"
+                 data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px"
+                 data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px"
+                 data-animate-style="fadeinleft" data-animate-duration="1"
+                 data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="40"
+                 data-field-left-res-320-value="10" data-field-top-res-480-value="50" data-field-left-res-480-value="40"
+                 data-field-top-res-640-value="60" data-field-left-res-640-value="70"
+                 data-field-left-res-960-value="70">
+                <h2 class="tn-atom" field="tn_text_1678667325571">{% if page2 == None %}О клубе{% else %}
+                    {{ page2.h1 }}{% endif %}</h2>
+            </div>
+            <div class="t396__elem tn-elem tn-elem__5622860411678667325575" data-elem-id="1678667325575"
+                 data-elem-type="text" data-field-top-value="134" data-field-left-value="80"
+                 data-field-width-value="333" data-field-axisy-value="top" data-field-axisx-value="left"
+                 data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px"
+                 data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="94"
+                 data-field-left-res-320-value="10" data-field-width-res-320-value="293"
+                 data-field-top-res-480-value="109" data-field-left-res-480-value="40"
+                 data-field-top-res-640-value="134" data-field-left-res-640-value="70"
+                 data-field-width-res-640-value="401" data-field-left-res-960-value="70">
+                <div class="tn-atom" field="tn_text_1678667325575">{% if page2 == None %}
+                    Опытные и&nbsp;профессиональные преподаватели. Сертификаты Международного альянса йоги.
+                    {% else %}{{ page2.disc1 }}{% endif %}
                 </div>
             </div>
-            <script>
+            <div class="t396__elem tn-elem tn-elem__5622860411678667325578 t-animate" data-elem-id="1678667325578"
+                 data-elem-type="text" data-field-top-value="123" data-field-left-value="730"
+                 data-field-width-value="430" data-field-axisy-value="top"
+                 data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px"
+                 data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px"
+                 data-animate-style="fadeinup" data-animate-duration="1"
+                 data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="189"
+                 data-field-left-res-320-value="10" data-field-width-res-320-value="293"
+                 data-field-top-res-480-value="201" data-field-left-res-480-value="106"
+                 data-field-width-res-480-value="334"
+                 data-field-top-res-640-value="246" data-field-left-res-640-value="70"
+                 data-field-width-res-640-value="464" data-field-top-res-960-value="69"
+                 data-field-left-res-960-value="499">
+                <div class="tn-atom" field="tn_text_1678667325578">{% if page2 == None %}
+                    В&nbsp;нашей команде сотни людей, мы&nbsp;рады видеть каждого, кто&nbsp;решил заниматься своим
+                    саморазвитием, йогой и&nbsp;медитаций, или&nbsp;просто нуждается в&nbsp;мотивации и&nbsp;поддержке
+                    {% else %}{{ page2.disc2 }}{% endif %}
+                </div>
+            </div>
+            <div class="t396__elem tn-elem tn-elem__5622860411678667535625" data-elem-id="1678667535625"
+                 data-elem-type="shape" data-field-top-value="220" data-field-left-value="729"
+                 data-field-height-value="1" data-field-width-value="510" data-field-axisy-value="top"
+                 data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px"
+                 data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px"
+                 data-field-top-res-320-value="180" data-field-left-res-320-value="-487"
+                 data-field-top-res-480-value="341" data-field-left-res-480-value="106"
+                 data-field-top-res-640-value="233" data-field-left-res-640-value="-238"
+                 data-field-width-res-640-value="770" data-field-top-res-960-value="219"
+                 data-field-left-res-960-value="499">
+                <div class="tn-atom"></div>
+            </div>
+        </div>
+    </div>
+    <script>
                 t_onFuncLoad('t396_initialScale', function() {
                     t396_initialScale('562286041');
                 });
@@ -325,6 +364,7 @@
                         t396_init('562286041');
                     });
                 });
-            </script>
-            <!-- /T396 -->
-        </div>
+
+    </script>
+    <!-- /T396 -->
+</div>
