создал модели до 3го экрана, переопределил save

--- a/start_page/templates/start_page/three_page/maps.html
+++ b/start_page/templates/start_page/three_page/maps.html
@@ -926,30 +926,30 @@
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="727" data-field-left-res-320-value="16" data-field-width-res-320-value="257" data-field-top-res-480-value="710" data-field-left-res-480-value="210" data-field-width-res-480-value="256"
                         data-field-top-res-640-value="755" data-field-left-res-640-value="320" data-field-width-res-640-value="273" data-field-top-res-960-value="335" data-field-left-res-960-value="700">
-                        <div class="tn-atom" field="tn_text_1678670225701">Обрести знания и&nbsp;инструменты для&nbsp;управления своим состоянием</div>
+                        <div class="tn-atom" field="tn_text_1678670225701">{% if advantages.title5 %}{{ advantages.title5 }}{% else %}Обрести знания и&nbsp;инструменты для&nbsp;управления своим состоянием{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622908921678670225703 t-animate" data-elem-id="1678670225703" data-elem-type="text" data-field-top-value="300" data-field-left-value="440" data-field-width-value="241" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="452" data-field-left-res-320-value="15" data-field-width-res-320-value="221" data-field-top-res-480-value="540" data-field-width-res-480-value="228"
                         data-field-top-res-640-value="575" data-field-left-res-640-value="40" data-field-width-res-640-value="242" data-field-top-res-960-value="275" data-field-left-res-960-value="360">
-                        <div class="tn-atom" field="tn_text_1678670225703">Развивать в себе внутренние качества, раскрыть сильные стороны</div>
+                        <div class="tn-atom" field="tn_text_1678670225703">{% if advantages.title3 %}{{ advantages.title3 }}{% else %}Развивать в себе внутренние качества, раскрыть сильные стороны{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622908921678670225705 t-animate" data-elem-id="1678670225705" data-elem-type="text" data-field-top-value="505" data-field-left-value="690" data-field-width-value="169" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="606" data-field-left-res-320-value="94" data-field-width-res-320-value="210" data-field-top-res-480-value="915" data-field-left-res-480-value="10" data-field-width-res-480-value="206"
                         data-field-top-res-640-value="960" data-field-left-res-640-value="60" data-field-width-res-640-value="186" data-field-top-res-960-value="510" data-field-left-res-960-value="680">
-                        <div class="tn-atom" field="tn_text_1678670225705">Улучшить свое тело. Оно станет сильным и гибким</div>
+                        <div class="tn-atom" field="tn_text_1678670225705">{% if advantages.title4 %}{{ advantages.title4 }}{% else %}Улучшить свое тело. Оно станет сильным и гибким{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622908921678670225708 t-animate" data-elem-id="1678670225708" data-elem-type="text" data-field-top-value="470" data-field-left-value="310" data-field-width-value="252" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="882" data-field-left-res-320-value="60" data-field-top-res-480-value="1090" data-field-left-res-480-value="200" data-field-width-res-480-value="236"
                         data-field-top-res-640-value="1160" data-field-left-res-640-value="268" data-field-top-res-960-value="470" data-field-left-res-960-value="310">
-                        <div class="tn-atom" field="tn_text_1678670225708">Чувствовать себя заряженным, энергичным, вдохновленным весь день</div>
+                        <div class="tn-atom" field="tn_text_1678670225708">{% if advantages.title6 %}{{ advantages.title6 }}{% else %}Чувствовать себя заряженным, энергичным, вдохновленным весь день{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622908921678670225710 t-animate" data-elem-id="1678670225710" data-elem-type="text" data-field-top-value="340" data-field-left-value="80" data-field-width-value="127" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="232" data-field-left-res-320-value="30" data-field-top-res-480-value="260" data-field-left-res-480-value="90" data-field-top-res-640-value="295" data-field-left-res-640-value="160">
-                        <div class="tn-atom" field="tn_text_1678670225710">Оздоровить свой организм</div>
+                        <div class="tn-atom" field="tn_text_1678670225710">{% if advantages.title1 %}{{ advantages.title1 }}{% else %}Оздоровить свой организм{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622908921678670225712" data-elem-id="1678670225712" data-elem-type="image" data-field-top-value="202" data-field-left-value="-163" data-field-width-value="1499" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-filewidth-value="6003" data-field-fileheight-value="1559"
@@ -990,7 +990,8 @@
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="292" data-field-left-res-320-value="123" data-field-width-res-320-value="182" data-field-top-res-480-value="380" data-field-left-res-480-value="290"
                         data-field-width-res-480-value="180" data-field-top-res-640-value="395" data-field-left-res-640-value="380" data-field-width-res-640-value="215">
-                        <div class="tn-atom" field="tn_text_1678670225734">Избавиться от&nbsp;стресса и&nbsp;тревог. Развивать уверенность в&nbsp;себе</div>
+                        <div class="tn-atom" field="tn_text_1678670225734">{% if advantages.title2 %}{{ advantages.title2 }}{% else %}Избавиться от&nbsp;стресса и&nbsp;тревог. Развивать уверенность в&nbsp;себе{% endif %}
+                            </div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622908921678721019386" data-elem-id="1678721019386" data-elem-type="shape" data-field-top-value="218" data-field-left-value="-111" data-field-height-value="1" data-field-width-value="450" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="189" data-field-left-res-320-value="-235"
